# cmake_template_linux

./: CMakeLists.txt  main.cpp
